fix background ad color on mobile

--- a/Shared (Extension)/Resources/style.css
+++ b/Shared (Extension)/Resources/style.css
@@ -91,7 +91,10 @@ a[href="/explore/"] {
 ******************/
 
 #tads,
-#tads .CnP9N.U3A9Ac.irmCpc {
+#tads .CnP9N.U3A9Ac.irmCpc,
+.commercial-unit-mobile-top,
+.commercial-unit-mobile-top .v7hl4d,
+.commercial-unit-mobile-bottom .v7hl4d {
     background-color: #F2E6C3 !important;
 }
 
